@@ -21,11 +21,12 @@ DIST adchpp_2.11.0.1_source.tar.gz 9126833 SHA256 cc88cf64ee54eb719499a7a8753f00
 DIST adchpp_2.8.0_source.tar.gz 8446076 SHA256 7819f18f4fbd5a17f1e06ca9aa66f6c1a31d59cab7b0e600940283aa0e6307c2 SHA512 e8b35a1cbbf641004788b0647f70a0b9b59d7eafcf8b7bef6b5157c5331b703ff30e9dfe8fe2d7097b2a3afbce40e4cdd0655e9fc8d6192702030e2e19c8025b WHIRLPOOL 429af354c8355a91b23b5e9ccba853a5aebb53a5d9d9acd0006adf543483e0145061543c4027f0dfa6b5983d0669dc4f4f20a552a3eb52f10df339c5e4fdec26
 DIST adchpp_2.8.1_source.tar.gz 8551219 SHA256 666e68056d6e4fc1f59ed2822eed914af293fa708fb943a046b40b4ba294a4f3 SHA512 b2c9a8c5a7cc1648f63690ea23c81d0d5ee0a555cd0e3ee2b5b302b195be6fafeb32d520758da124ff0b0f74e3fd12093456004a493e7547afa57ab01250089e WHIRLPOOL d09836ce0a8fcafb4f22775a74401f95864d05b7964e2b1c2fd5966005c93db8806e56c8f7eb11c2e6d7885989a44d6f1c7762ffa68a852b3f6af6211c131dfd
 DIST adchpp_2.9.0_source.tar.gz 8685696 SHA256 fe97b9dad7689c38411c965c75218ee4fc527d68570c9842e53354097cb27636 SHA512 86f1ab8b3cc02d30c9edf978baa93889703ac0c75112a77cc0e2aa7e361552e2b1da7ae9895d86ca394d06ff8f6a19a2faed1e278bd6bca5728bae87f25800b6 WHIRLPOOL a9657078f51b1681321c8229ac699fa2011cc44d30b1a2c19b8b5d3f403560ee08741664cb6a3bf751a5a9c1026602acd305bb1830ac0f2bd719897d420296a5
-EBUILD adchpp-2.11.0.ebuild 4005 SHA256 7fb9b52d75391e4296204317069eaddb122e3cc9f453f469d2bf135baf1665fb SHA512 55b383894df2eccc470306ecccc9d1f13142d608d305f4215c0dd5c7c92ea75cf9e9a326fe0b5ee1581b76468ad45753cb92f3b888c6564788824b4ca9d3c82f WHIRLPOOL 21993bf74271a5d82a8ec7d8d1a7a414b5a4be2dcc4e2badad4083438059ddc971c7fd5e46be8d18b12b5e423367f2709d6a913f3c53cf34ea338469ab39fd50
+EBUILD adchpp-2.11.0-r1.ebuild 4293 SHA256 7e91d87948ba5752137822d6d32cfbdaee6f5c1454c18b0046d6fe5921ae47c1 SHA512 86f5558440885c152ea185f6442697010fa3fcacbc3d8cbe8e3f4c17e2100933d9d9eacc6b5b1bca61968a4906a3de7660ef4a7478ff63477907ef39d3f158e5 WHIRLPOOL 50320a609652d5daee3fd52655c3b8a6f09f39050299c73417e1f7caeae32e123b2d4122d3605980f9285716887b25a7525afb98884195b0967cc095e3e59132
+EBUILD adchpp-2.11.0.ebuild 4029 SHA256 e22c5457fe0241053488900645fafa9632c635e7cfc8b89f1ca21c1a3355908f SHA512 b5103f07faae9a9156676c34f43916d4a0ec24e8e73ceeb05db9dd360e4dd4f2763b6674f5c4a07d06ca469120131b9fd686fc6a5713914d7f6f5c5d1c64582b WHIRLPOOL 6cb7293681ff6b8e4827e2d743aa4eb52ec8d067773883717125059670656bbe75a3e639a85d42e64b37bcf59f7b410e8e9364068dadf28f0f135bf0e53446d3
 EBUILD adchpp-2.8.0.ebuild 4099 SHA256 c1115000de26fb362a30d5b7de5fa72fb58e09eb0d8898e2e2856f1f704fe917 SHA512 1c5c8ea7debd93bed566fbdc9f19c5edde99267d71434ccb2c540f486257efcb1beea536a204e47e4a80006fffcb116619932ffad92669c8535d6786ed3cef1a WHIRLPOOL 79fb246ddfa6b3d9d7939d73b2801927ab1fb8b0418347bdffddd62d5e888369461811d85c32f2a476d0a25e33c76697f7d27385541e4fca8a936b84660672ca
 EBUILD adchpp-2.8.1-r3.ebuild 4174 SHA256 ff097f091651ded4edc3786575ef74a395f87a851ee01f3a35961fec73e0958d SHA512 a63b815ece9fc0f4cdfde0c8d66ee78494c2b96e80b0a44ca8334a89d6f3395a9712200e4156a66dd696fc72d7690015a5f360dccbaca2a89d2079e8b9d4312d WHIRLPOOL 0fc82c8720afa63fe1cbed8dbcc23319dd79f8ed0f626c7df0d39d99e58219431b81e6228f662b33c00f2ce86ca7e659a168387c58072eb17ee42746df1a32da
 EBUILD adchpp-2.9.0-r1.ebuild 4207 SHA256 05e7064b333be8ef13562055558e6e4399d120d8c85843a8f6c5f5f9bf6d8f0b SHA512 705d5e21cbf9960977cb24f732d2d9cb852d86173baffd79e8db3468b37b5de9dc7139341080faad24904ced58732c6f6c53a760b86e190ef1f95ccd7e1c6aec WHIRLPOOL 19046ed14aadb09fc8df85f66f86803c60aad7c966a6178cf7087cbae32a6d7f4b23fe9716b091628aa3266d296f3358abb8430e07c64a65ae5d0f8c1d1c3838
 EBUILD adchpp-2.9.0.ebuild 4002 SHA256 ec7397d234e6f2bff49714badd4808d1d7438b8c1a5ba7a9eb89b6550e818a7b SHA512 7fa1e4a3b866420331789951f2cac879d6d9fffa7a5fbc148aeea7aadee707a69aeaa9d5129e24e5e74fc1d8d510be26c3581e63593277d6f7d91c523932b8fd WHIRLPOOL d966a9bd09ecc04c28f1aba08f17a510f4ee0dc6fd1d64775efce34e2fe957ca196013d86c7d4e82e7ad2ac4c07a18218b56c85faf8287fff7419d352541bf78
-MISC ChangeLog 2485 SHA256 314ae5f6cdf593c09b0a144b3cea79fb6284f1b68ab3ab25b41c7097d5820c49 SHA512 d8c5462680fc6bc34ec5a2bf03a6eb73b25980b4b3d830ad11b1a5dac7a38ad0bca2d8ca709d599987df21e45bbc17c0a0753a21eb7c2f90e0cded644806becc WHIRLPOOL fced850d7b8169b936ce84feee7f41875aa69db7e8f3160d8173b2fc9409f63a508528f1fda36abf5126df1b07aaf1c2993aa353f4704e756a71c9ebd18868a2
+MISC ChangeLog 2684 SHA256 4dcda6dfadb9a63c3e91b911b28abeda9d4ac9511ae2b2a9d169954b685c7d4d SHA512 42bd2436f2d1c228133786f346cbf0f0e9d6e14e4a4d31a1f6a9e1eb7551f7e2c60d976e66de6ec0e9b3ad6ce614ed78e4a11c64658d80dbe22f6ca8e19703a1 WHIRLPOOL 504838c0d5b523fc0be578d98e6a68b581350a45c679d071b2f80e331e465e34624a274a18b4ecabc105ad6ca98f7a75d1822f1c84d530eec824a4fee325c5cf
 MISC TODO 112 SHA256 4d3a6f431d988c8ac37e6bbdb8fc946ddc591cce2029a83a339e0b16e4954d4c SHA512 297523e8d11393dc37db2616561e027cd39191cfbdc5b0fe5cc95b3b8f038e90b491ad10feb256506fad996e5b427990a6aa479976524cf22f873588705bbbb6 WHIRLPOOL 5f06b3cd7e94f6d5f905be92ab915f71763b009572d69b63de0e92411fb97591696bf4bb67913a1acc8b72291add029f4ccc6fe76cf3d640766e78caf056412d
-MISC metadata.xml 407 SHA256 f5001e99b6181be8bac1b3ba8dbbce6ff2d63084ea64816cbb16d53a6871738b SHA512 2d89602c893366202dd7bb25928869e85febc1bda1e3e1a6547149aa84a38eae542629356de26dede7d72eae1d0262a06edd50b963fb02c403f60164a393eea1 WHIRLPOOL 32509c63bbafb3c1b5e6c9c75cfa2fbcc47afeaa6903d266c8f8d167e5895f7c44c8759647c6f073630f56c5a12fdb14ea3c8742df9639ae8bd4dfa5c43f6cbf
+MISC metadata.xml 644 SHA256 a850bd20d7c3201bc1fb65ed02167dde40a4ed8cc15d4722ac03d632a0d222aa SHA512 b9266a517faf5fa7ae627c9f9ffdac3b6e067a429b5129fe1d750ce7d8f2fb5b41aa1f663bfedd411974b17ec82f83e8a15a92b4cdfebf82fd0d9248ff2ea5fe WHIRLPOOL fec9e7f00c88b571e43739c8aebff03d97d3aedc888355005809c68ae79de60642db489b93a7470b72064ac5aa74bd0fd70897d6a54b48f64be0c9cb1b68bce9
