@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*adchpp-2.11.0-r1 (21 Sep 2013)
+
+  21 Sep 2013; Francisco Blas Izquierdo Riera (klondike) adchpp-2.11.0.ebuild,
+  +adchpp-2.11.0-r1.ebuild:
+  System boost needs 1.52 or higher for the locale-mt lib
+
 *adchpp-2.11.0 (15 Aug 2013)
 
   15 Aug 2013; Francisco Blas Izquierdo Riera (klondike) +adchpp-2.11.0.ebuild,
